# streamplace

./: .gitignore  .gitlab-ci.yml  .golangci.yaml  .prettierignore  .prettierrc  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  content-filters-example.json  content-filters-example.yaml  go.mod  go.sum  knip.json  lerna.json  meson.build  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tmparch.md  tools.go
.ci/: dockerfile-hash.yaml
.github/workflows/: add-to-project.yaml  build.yaml  golangci-lint.yaml  sync-gitlab.yaml  sync-tangled.yaml
.husky/: pre-commit
.yarn/patches/: @atproto-oauth-client-npm-0.3.16-f0e37a9473.patch
cmd/aquareum/: aquareum.c
cmd/libstreamplace/: build-flags.go  streamplace.go
cmd/streamplace/: empty.c  streamplace.c
docker/: build.Dockerfile  bunny.Dockerfile  bunny.sh  local.Dockerfile  mistserver.Dockerfile  mistserver.json  release.Dockerfile  sources.list
hack/: atproto-key.mjs  compare-hash.sh  compare-oneshot.sh  compare-roundtrip.sh  deterministic-mux.sh  firehose-proxy.sh  golangci-lint  node-version.js  parallel.sh  parse-go-stack-trace.mjs  push.mjs  segment-durations.sh  sine-time.sh  upload-fixture.sh
js/app/: .env.development  .env.production  .gitignore  app.config.ts  app.go  babel.config.js  metro.config.js  package.json  tamagui.config.ts  tsconfig.base.json  tsconfig.json
js/atproto-oauth-client-react-native/: README.md  package.json  tsconfig.build.json  tsconfig.build.tsbuildinfo
js/components/: .gitignore  README.md  i18next.config.js  package.json  tsconfig.json
js/config-react-native-webrtc/: README.md  package.json  tsconfig.json
js/desktop/: README.md  forge.config.ts  package.json
js/dev-env/: package.json  run.mjs
js/docs/: astro.config.mjs  package.json
js/streamplace/: .npmignore  package.json  tsconfig.json  tsup.config.ts
lexicons/: lexicons.go
patches/: react-native-webrtc.patch
pkg/api/: api.go  api_internal.go  api_test.go  api_util.go  app-downloads.go  app-downloads_test.go  app-return.go  app-return.html  app-updates.go  deep_linking.go  desktop-updates.go  feeds.go  feeds_test.go  mimes.go  playback.go  rtmp_server.go  stream_key.go  websocket.go
pkg/aqhttp/: aqhttp.go  aqhttp_test.go  resolv.go  transport.go
pkg/aqio/: aqio.go
pkg/aqwebrtc/: aqwebrtc.go
pkg/atproto/: atproto.go  atproto_test.go  chat_message_test.go  client_metadata.go  firehose.go  firehose_test.go  get_cid.go  handle_test.go  jwks.go  labeler_firehose.go  labels.go  lexicon_repo.go  lexicon_repo_queries.go  lexicon_repo_queries_test.go  lexicon_repo_test.go  locks.go  migrate.go  sync.go  util.go
pkg/bus/: bus.go  segchanman.go
pkg/c2pa/: Builder.schema.json  ManifestDefinition.schema.json  Reader.schema.json
pkg/c2patypes/: c2patypes.go  callback_signer.go  stream_adapter.go
pkg/cmd/: aquareum.go  clip.go  combine.go  go_livepeer.go  live.go  sign.go  signer.go  split.go  stream.go  streamplace.go  streamplace_linux.go  streamplace_notlinux.go  timeoutgroup.go  tracing.go  whep.go  whip.go
pkg/config/: adapt_flags.go  adapt_flags_test.go  config.go  livepeer_flags.go  user_consent.go
pkg/constants/: constants.go
pkg/devenv/: devenv.go
pkg/director/: director.go  stream_session.go
pkg/errors/: errors.go
pkg/globalerror/: globalerror.go
pkg/gstinit/: gstinit.go
pkg/iroh/: iroh_streamplace.go  iroh_streamplace_test.go
pkg/linking/: linking.go  linking_test.go
pkg/livepeer/: livepeer.go
pkg/log/: log.go
pkg/media/: audio_smear.go  audio_smear_test.go  bus_handler.go  bus_handler_test.go  clip.go  clip_test.go  clip_user.go  concat.go  concat2.go  concat2_test.go  concat_demux.go  concat_demux_test.go  concat_test.go  constants.go  deterministic_muxing_test.go  ffmpeg_concat.go  gstreamer.go  gstreamer_test.go  ingredient_test.go  io_helpers.go  io_helpers_test.go  key_revocation.go  leak_test.go  m3u8.go  manifest_builder.go  media.go  media_data_parser.go  media_data_parser_test.go  media_signer.go  media_signer_ext.go  media_test.go  media_validator.go  mkv_ingest.go  packetize.go  packetize_test.go  peer_connection.go  progressive.go  rtcrec_test.go  rtmp.go  rtmp_ingest.go  (+21 more)
pkg/model/: block.go  broadcast_origin.go  chat_message.go  chat_message_default_colors.go  chat_profile.go  default_metadata.go  feed_post.go  follow.go  gate.go  hide.go  identity.go  label.go  labeler.go  live_metadata.go  livestream.go  model.go  notification.go  oauth_session.go  player_event.go  publisher_key.go  recommendations.go  repo.go  segment.go  segment_test.go  server_settings.go  settings.go  signing_key.go  thumbnail.go  xrpc_stream_event.go
pkg/multitest/: multitest_test.go
pkg/notifications/: firebase.go
pkg/oproxy/: helpers.go  oauth_0_metadata.go  oauth_1_par.go  oauth_2_authorize.go  oauth_3_return.go  oauth_4_token.go  oauth_5_revoke.go  oauth_middleware.go  oauth_session.go  oproxy.go  resolution.go  types.go  xrpc_client.go
pkg/proc/: proc.go
pkg/renditions/: renditions.go  renditions_test.go
pkg/replication/: replicator.go
pkg/resync/: resync.go
pkg/rtcrec/: cbor.go  recording_peerconnection.go  recording_track.go  replay_peerconnection.go  replay_track.go  rtcrec.go  webrtc_recording.go  webrtc_recording_test.go  (+1 more)
rust/export-c2pa-schema/: Cargo.toml  README.md
rust/export-c2pa-schema/src/: main.rs
rust/iroh-streamplace/: .gitignore  Cargo.toml  Makefile  README.md  meson.build
rust/iroh-streamplace/src/: c2pa.rs  db.rs  endpoint.rs  error.rs  key.rs  lib.rs  node_addr.rs  receiver.rs  sender.rs  streams.rs  test_stream.rs  tests.rs  utils.rs
rust/iroh-streamplace/src/node/: db.rs  mod.rs  streams.rs  tests.rs
subprojects/: .gitignore  FFmpeg.wrap  atproto.wrap  c2pa_go.wrap  gstreamer-full.wrap  iroh_streamplace.wrap  mistserver.wrap  x264.wrap
test/: leak-check.sh  test-viewer-leak.sh
util/: generate-dev-admin-key.mjs  lexgen-build.json  lexgen-server.json  mac-build.sh  mac-codesign.sh  mac-tart-build.sh  osxcross-codesign.sh  osxcross-darwin-amd64.ini  osxcross-darwin-arm64.ini  streamplace-dev.sh  windows-selftest.sh
(+668 files in other folders)
