[package]
name = "iroh-streamplace"
version = "0.1.0"
edition = "2024"

[lib]
name = "iroh_streamplace"
crate-type = ["staticlib", "cdylib"]

[dependencies]
iroh = { version = "0.93", features = ["discovery-local-network"] }
iroh-base = "0.93.0"
tokio = "1.47.1"

uniffi = { version = "=0.28.3", features = ["tokio"] }
url = "2.5.4"
bytes = { version = "1.10.1", features = ["serde"] }
n0-future = "0.2.0"
async-trait = "0.1.88"
tracing = "0.1.41"
snafu = "0.8.6"
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
irpc = "0.9.0"
irpc-iroh = "0.9.0"
c2pa = { git = "https://github.com/hyphacoop/c2pa-rs.git", rev = "1b84d40219b27340a30fc309250e774e8a7b7761", features = [
  "openssl",
  "file_io",
] }
thiserror = "2.0.16"
serde_json = "1.0.145"
iroh-smol-kv = { version = "0.3.1" }
hex = "0.4.3"
iroh-gossip = "0.93.1"
ref-cast = "1.0.25"
rand = "0.9"

[dev-dependencies]
testresult = "0.4.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
